--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "react-dom": "15.1.0",
     "react-google-maps": "^4.11.0",
     "react-router": "2.4.1",
-    "react-tap-event-plugin": "1.0.0",
+    "react-tap-event-plugin": "1.0.0"
   }
 }
